Se agregaron mas configuraciones al chat

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="row">
             <span class="switch-label">Mostrar Avatar</span>
             <label class="switch">
-              <input type="checkbox" id="toggle-avatar" >
+              <input type="checkbox" id="toggle-mostarAvatar" >
               <span class="slider"></span>
             </label>
           </div>
@@ -25,7 +25,7 @@
           <div class="row">
             <span class="switch-label">Mostrar Tiempo</span>
             <label class="switch">
-              <input type="checkbox" id="toggle-tiempo">
+              <input type="checkbox" id="toggle-mostrarTiempo">
               <span class="slider"></span>
             </label>
           </div>
@@ -33,7 +33,7 @@
           <div class="row">
             <span class="switch-label">Mostrar Insignias</span>
             <label class="switch">
-              <input type="checkbox" id="toggle-insignias" >
+              <input type="checkbox" id="toggle-mostarInsigneas" >
               <span class="slider"></span>
             </label>
           </div>
@@ -41,7 +41,7 @@
           <div class="row">
             <span class="switch-label">Permitir Imágenes</span>
             <label class="switch">
-              <input type="checkbox" id="toggle-imagenes">
+              <input type="checkbox" id="toggle-mostarImagenes">
               <span class="slider"></span>
             </label>
           </div>
@@ -49,24 +49,29 @@
           <div class="row">
             <span class="switch-label">Excluir Comandos</span>
             <label class="switch">
-              <input type="checkbox" id="toggle-comandos">
+              <input type="checkbox" id="toggle-excluirComandos">
               <span class="slider"></span>
             </label>
           </div>
 
           <div class="row">
             <span class="switch-label">Tamaño de fuente</span>
-            <input type="number" id="font-size" min="8" max="72" value="">
+            <input type="number" id="tamañoFuente" min="8" max="72" value="">
+          </div>
+
+          <div class="row">
+            <span class="switch-label">Usuario Ignorados</span>
+            <input type="text" id="usuariosIgnorados" value="">
           </div>
 
           <div class="row">
             <span class="switch-label">Host</span>
-            <input type="text" id="font-size" value="127.0.0.1">
+            <input type="text" id="hostInput" value="127.0.0.1">
           </div>
 
           <div class="row">
             <span class="switch-label">Puerto</span>
-            <input type="text" id="font-size" value="8080">
+            <input type="text" id="portInput" value="8080">
           </div>
       
         </div>
