se agregaron mas validadores

--- a/index.html
+++ b/index.html
@@ -39,13 +39,45 @@
           </div>
       
           <div class="row">
-            <span class="switch-label">Permitir Imágenes</span>
+            <span class="switch-label">Permitir Imágenes (EXPERIMENTAL)</span>
             <label class="switch">
               <input type="checkbox" id="toggle-mostarImagenes">
               <span class="slider"></span>
             </label>
           </div>
-      
+
+          <div class="row">
+            <span class="switch-label">Mostrar Canjes</span>
+            <label class="switch">
+              <input type="checkbox" id="toggle-mostrarCanjes">
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <div class="row">
+            <span class="switch-label">Mostrar Bits</span>
+            <label class="switch">
+              <input type="checkbox" id="toggle-mostrarMensajesBits">
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <div class="row">
+            <span class="switch-label">Mostrar Raids</span>
+            <label class="switch">
+              <input type="checkbox" id="toggle-mostrarRaids">
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <div class="row">
+            <span class="switch-label">Mostrar Emotes Gigantes</span>
+            <label class="switch">
+              <input type="checkbox" id="toggle-mostrarEmotesGigantes">
+              <span class="slider"></span>
+            </label>
+          </div>
+
           <div class="row">
             <span class="switch-label">Excluir Comandos</span>
             <label class="switch">
@@ -81,7 +113,7 @@
     <div class="footer">
         <h2>CHAT URL</h2>
         <input class="url-settings" type="text" readonly id="widgetUrlInput"/>
-        <button class="btn-guardar" id="btnWidgetUrl" onclick="copiarUrl()">Click para copiar URL</button>
+        <button class="btn-guardar" id="btnWidgetUrl" onclick="copiarUrl()">Click para general URL</button>
     </div>
 </body>
 
