ariel donate unas 10 subs aca de compas

--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
           </div>
 
           <div class="row">
+            <span class="switch-label">Roles Permitidos</span>
+            <label class="switch">
+              <select name="select" class="options" id="rolesId">
+                <option value="4">Streamer</option>
+                <option value="3">Moderadores y Streamer</option>
+                <option value="2" > Vips Moderadores y Streamer</option>
+                <option value="1">Todos</option>
+                <option value="0" selected>Nadie</option>
+              </select>
+            </label>
+          </div>
+
+          <div class="row">
             <span class="switch-label">Mostrar Canjes</span>
             <label class="switch">
               <input type="checkbox" id="toggle-mostrarCanjes">
