--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <div class="footer">
         <h2>CHAT URL</h2>
         <input class="url-settings" type="text" readonly id="widgetUrlInput"/>
-        <button class="btn-guardar" id="btnWidgetUrl" onclick="copiarUrl()">Click para general URL</button>
+        <button class="btn-guardar" id="btnWidgetUrl" onclick="copiarUrl()">Click para generar URL</button>
     </div>
 </body>
 
