Se agregaron nuevas opciones de personalizacion

--- a/index.html
+++ b/index.html
@@ -90,9 +90,17 @@
           <h4>¿Que mensajes quieres que se muestren?</h4>
 
           <div class="row">
-            <span class="switch-label">Mostrar Canjeos de canal (<strong>proximamente</strong>)</span>
+            <span class="switch-label">Mostrar Canjeos de canal</span>
             <label class="switch">
-              <input type="checkbox" id="toggle-mostrarCanjes" disabled>
+              <input type="checkbox" id="toggle-mostrarCanjes">
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <div class="row">
+            <span class="switch-label">Mostrar Mensajes Destacados</span>
+            <label class="switch">
+              <input type="checkbox" id="toggle-mostrarDestacado">
               <span class="slider"></span>
             </label>
           </div>
@@ -117,6 +125,22 @@
             <span class="switch-label">Mostrar Follows (<strong>proximamente</strong>)</span>
             <label class="switch">
               <input type="checkbox" id="toggle-mostrarRaids" disabled>
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <div class="row">
+            <span class="switch-label">Mostrar Subs (<strong>proximamente</strong>)</span>
+            <label class="switch">
+              <input type="checkbox" id="toggle-mostrarSubs" disabled>
+              <span class="slider"></span>
+            </label>
+          </div>
+
+          <div class="row">
+            <span class="switch-label">Mostrar Subs Regaladas (<strong>proximamente</strong>)</span>
+            <label class="switch">
+              <input type="checkbox" id="toggle-mostrarSubsRegaladas" disabled>
               <span class="slider"></span>
             </label>
           </div>
