Se agrego seleccion de color y opacidad

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
           <h4>Apariencia</h4>
 
+          <div class="row" id="fondoColorPantalla">
+            <span class="switch-label">Selecciona un Color de fondo</span>
+            <input type="color" id="fondoColor" value="">
+          </div>
+
+          <div class="row" id="opacidadPantalla">
+            <span class="switch-label">Selecciona la Opacidad</span>
+            <input type="number" id="opacidad" value="">
+          </div>
+
           <div class="row">
             <span class="switch-label">Mostrar Avatar</span>
             <label class="switch">
