Se rediseño la UI

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="config-container">
       <div class="url-header">
         <h2>CHAT URL</h2>
-        <input class="url-settings" type="text" readonly id="widgetUrlInput" />
+        <input class="url-settings blur-on-lose-focus" type="text" readonly id="widgetUrlInput" disabled/>
         <button class="btn-guardar" id="btnWidgetUrl" onclick="copiarUrl()">Click para copiar URL</button>
       </div>
 
