--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="url-header">
         <h2>CHAT URL</h2>
         <input class="url-settings blur-on-lose-focus" type="text" readonly id="widgetUrlInput" disabled/>
-        <button class="btn-guardar" id="btnWidgetUrl" onclick="copiarUrl()">Click para copiar URL</button>
+        <button class="btn-guardar" id="btnWidgetUrl" onclick="copiarUrl()">Doble click para copiar URL</button>
       </div>
 
       <div class="settings-container">
