Se agrego mensaje cuando usuario hace clic al copiar

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <div id="config-container">
       <div class="url-header">
         <h2>CHAT URL</h2>
-        <input class="url-settings blur-on-lose-focus" type="text" readonly id="widgetUrlInput" disabled/>
+        <div id="widgetUrlInputContainer">
+          <input class="url-settings blur-on-lose-focus" type="text" readonly id="widgetUrlInput" disabled/>
+        </div>
         <button class="btn-guardar" id="btnWidgetUrl" onclick="copiarUrl()">Doble click para copiar URL</button>
       </div>
 
