se creo el menu dinamicamente y se agregaron mas opciones

--- a/index.html
+++ b/index.html
@@ -39,167 +39,13 @@
       </div>
 
       <div class="settings-container">
-        <h2>Configuraciones</h2>
-
-        <h4>Apariencia</h4>
-
-        <div class="row" id="fondoColorPantalla">
-          <span class="switch-label">Color de fondo</span>
-          <input type="color" id="fondoColor"  />
-        </div>
-
-        <div class="row" id="opacidadPantalla">
-          <span class="switch-label">Opacidad</span>
-          <input type="number" id="opacidad"  />
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Mostrar Avatar</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostarAvatar"  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Mostrar Tiempo</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostrarTiempo"  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Mostrar Insignias</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostarInsigneas"  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <h4>General</h4>
-
-        <div class="row">
-          <span class="switch-label">Permitir Imágenes</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostarImagenes"  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Roles Permitidos</span>
-          <select class="options" id="rolesId"  >
-            <option value="4">Streamer</option>
-            <option value="3">Moderadores y Streamer</option>
-            <option value="2">Vips, Moderadores y Streamer</option>
-            <option value="1">Todos</option>
-            <option value="0" selected>Nadie</option>
-          </select>
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Excluir Comandos</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-excluirComandos"  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Tamaño de fuente</span>
-          <input type="number" id="tamañoFuente" min="1" max="42"  />
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Usuarios Ignorados</span>
-          <input type="text" id="usuariosIgnorados"  />
-        </div>
-
-        <h4>¿Qué mensajes quieres mostrar?</h4>
-
-        <div class="row">
-          <span class="switch-label">Canjeos de canal</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostrarCanjes"  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Mensajes Destacados</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostrarDestacado"  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <!-- Opciones futuras -->
-        <div class="row">
-          <span class="switch-label">Bits (próximamente)</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostrarBits" disabled  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Raids (próximamente)</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostrarRaids" disabled  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Follows (próximamente)</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostrarFollows" disabled  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Subs (próximamente)</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostrarSubs" disabled  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Subs Regaladas (próximamente)</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostrarSubsRegaladas" disabled  />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Emotes Gigantes (próximamente)</span>
-          <label class="switch">
-            <input type="checkbox" id="toggle-mostrarEmotesGigantes" disabled />
-            <span class="slider"></span>
-          </label>
-        </div>
-
-        <h4>Streamerbot</h4>
-
-        <div class="row">
-          <span class="switch-label">Host</span>
-          <input type="text" id="hostInput" value="127.0.0.1" />
-        </div>
-
-        <div class="row">
-          <span class="switch-label">Puerto</span>
-          <input type="text" id="portInput" value="8080" />
-        </div>
+        
       </div>
     </div>
 
   </div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
